--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "tipjar-celoapp/lib/forge-std"]
 	path = tipjar-celoapp/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "simple-poll/lib/forge-std"]
+	path = simple-poll/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
