--- a/onchain-app/package.json
+++ b/onchain-app/package.json
@@ -14,8 +14,9 @@
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "viem": "^2.37.9",
-    "wagmi": "^2.17.5"
+    "viem": "^2.37.12",
+    "wagmi": "^2.17.5",
+    "web3": "^4.16.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
