--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "simple-poll/lib/forge-std"]
 	path = simple-poll/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "minimal-token-foundry/lib/forge-std"]
+	path = minimal-token-foundry/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
